Fix connection warning not visible on mobile

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -136,7 +136,7 @@ blockquote {
 	padding: 2px;
 	position: absolute;
 	width: 100%;
-	z-index: 1000;
+	z-index: 1000000;
 	border-radius: 0px;
 }
 
